# Thesis

./: .env  README.md  run_schedule.py
benchmarks/programs/CUTCP/CONTROLLER/CUTCP/src/: cutcp.cc
benchmarks/programs/CUTCP/common/scripts/data_gen/: gen.py  measure_domain.py
benchmarks/programs/CUTCP/common/scripts/profile/: knobs.py  profiling.py  system.py
benchmarks/programs/CUTCP/data/in/: 20k.txt  5k.txt
benchmarks/programs/HISTO/CONTROLLER+MARGOT/: CMakeLists.txt  build.sh
benchmarks/programs/HISTO/CONTROLLER+MARGOT/HISTO/: CMakeLists.txt
benchmarks/programs/HISTO/CONTROLLER/HISTO/src/: histo.cc
benchmarks/programs/HISTO/MARGOT/: CMakeLists.txt
benchmarks/programs/HISTO/MARGOT/HISTO/: CMakeLists.txt
benchmarks/programs/HISTO/MARGOT/HISTO/margot/: margot.json
benchmarks/programs/HISTO/MARGOT/HISTO/src/: histo.cc
benchmarks/programs/NBODY/CONTROLLER+MARGOT/: CMakeLists.txt
benchmarks/programs/NBODY/CONTROLLER+MARGOT/NBODY/: CMakeLists.txt
benchmarks/programs/NBODY/CONTROLLER/NBODY/src/: nbody.cc
benchmarks/programs/NBODY/MARGOT/: CMakeLists.txt
benchmarks/programs/NBODY/MARGOT/NBODY/: CMakeLists.txt
benchmarks/programs/NBODY/MARGOT/NBODY/margot/: margot.json
benchmarks/programs/NBODY/MARGOT/NBODY/src/: nbody.cc
benchmarks/programs/NBODY/data/in/: 1024.txt  256.txt
benchmarks/programs/SGEMM/CONTROLLER+MARGOT/: CMakeLists.txt  build.sh
benchmarks/programs/SGEMM/CONTROLLER+MARGOT/SGEMM/: CMakeLists.txt
benchmarks/programs/SGEMM/MARGOT/: CMakeLists.txt
benchmarks/programs/SGEMM/MARGOT/SGEMM/: CMakeLists.txt
benchmarks/programs/SHA/CONFIG/: CMakeLists.txt
benchmarks/programs/SHA/CONFIG/SHA/: CMakeLists.txt
benchmarks/programs/SHA/CONFIG/SHA/src/: sha.cc
communication/: build.sh
communication/libs/AppRegisterClient/include/AppRegisterClient/: AppRegister.h
communication/libs/AppRegisterClient/src/: AppRegister.cc
communication/libs/AppRegisterCommon/include/AppRegisterCommon/: AppRegister.h
communication/libs/AppRegisterServer/include/AppRegisterServer/: App.h  AppData.h
communication/libs/AppRegisterServer/src/: AppData.cc
cpp_controller/: CMakeLists.txt  build.sh
cpp_controller/common/libs/: CMakeLists.txt
cpp_controller/common/libs/Policies/: CMakeLists.txt
cpp_controller/common/libs/Policies/include/Policies/: MargotOnlyPolicy.h  PythonPolicy.h  SetConfigurationPolicy.h
cpp_controller/common/libs/Policies/src/: MargotOnlyPolicy.cc  PythonPolicy.cc  SetConfigurationPolicy.cc
cpp_controller/common/libs/Utils/: CMakeLists.txt
cpp_controller/controllers/: CMakeLists.txt
cpp_controller/controllers/MARGOT_ONLY/: CMakeLists.txt
cpp_controller/controllers/MARGOT_ONLY/src/: main.cc
cpp_controller/controllers/PYTHON_POLICY/: CMakeLists.txt
cpp_controller/controllers/PYTHON_POLICY/src/: main.cc
data/test_0/: config.txt  schedule.csv
data/test_1/: schedule.csv
python_controller/knowledge/HISTO/1080/: cpu.csv  gpu.csv
python_controller/knowledge/HISTO/480/: cpu.csv  gpu.csv
python_controller/knowledge/HISTO/720/: cpu.csv  gpu.csv
python_controller/knowledge/NBODY/1024/: cpu.csv  gpu.csv
python_controller/knowledge/NBODY/2048/: cpu.csv  gpu.csv
python_controller/knowledge/NBODY/256/: cpu.csv  gpu.csv
python_controller/knowledge/NBODY/512/: cpu.csv  gpu.csv
python_controller/knowledge/SGEMM/128/: cpu.csv  gpu.csv
python_controller/knowledge/SGEMM/256/: cpu.csv  gpu.csv
python_controller/knowledge/SGEMM/32/: cpu.csv  gpu.csv
python_controller/knowledge/SGEMM/64/: cpu.csv  gpu.csv
python_controller/server/: main.py
python_controller/server/model/: app.py  knowledge.py  prediction.py  system.py  system_state.py
python_controller/server/policy/states/: __init__.py  decide.py  idle.py  refine.py  state.py  wait_decide.py  wait_refine.py
python_controller/server/policy/utility/: app_knowledge.py  app_throughput.py  system_config.py  system_power.py  system_state_utility.py
(+5 files in other folders)
